--- a/front/package.json
+++ b/front/package.json
@@ -6,24 +6,37 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "format": "prettier --write **/*.{ts,tsx,css,md,json} --config ./.prettierrc.json"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-router/node": "^7.5.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vercel/react-router": "^1.1.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
