--- a/front/components.json
+++ b/front/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "",
     "css": "app/app.css",
-    "baseColor": "zinc",
+    "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
