--- a/front/package.json
+++ b/front/package.json
@@ -7,10 +7,11 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "format": "prettier --write **/*.{ts,tsx,css,md,json} --config ./.prettierrc.json"
+    "format": "prettier --write \"**/*.{ts,tsx,js}\""
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@react-router/node": "^7.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
