--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "fastapi>=0.115.12",
     "passlib>=1.7.4",
     "pydantic-settings>=2.9.1",
+    "pydantic[email]>=2.11.4",
     "python-jose[cryptography]>=3.4.0",
+    "python-multipart>=0.0.20",
     "sqlmodel>=0.0.24",
     "uvicorn>=0.34.2",
 ]
