--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "alembic>=1.15.2",
+    "bcrypt>=4.3.0",
     "fastapi>=0.115.12",
     "passlib>=1.7.4",
     "pydantic-settings>=2.9.1",
