--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,11 +3,14 @@
 alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 cffi==1.17.1 ; platform_python_implementation != 'PyPy'
 click==8.2.0
 colorama==0.4.6 ; sys_platform == 'win32'
 cryptography==45.0.2
+dnspython==2.7.0
 ecdsa==0.19.1
+email-validator==2.2.0
 exceptiongroup==1.3.0 ; python_full_version < '3.11'
 fastapi==0.115.12
 greenlet==3.2.2 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')
@@ -23,6 +26,7 @@ pydantic-core==2.33.2
 pydantic-settings==2.9.1
 python-dotenv==1.1.0
 python-jose==3.4.0
+python-multipart==0.0.20
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
