--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,9 @@ services:
       - "${API_PORT}:80"
     volumes:
       - ./back:/app
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
