--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+RUN apk add --no-cache curl
+
 COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
@@ -13,4 +15,4 @@ COPY . .
 
 RUN alembic upgrade head
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "80"]
