--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - ./back:/app
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
-      interval: 30s
+      test: curl -f http://localhost:80/healthcheck || exit 1
+      interval: 5s
       timeout: 5s
       retries: 3
-      start_period: 5s
+      start_period: 2s
