--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
     ports:
       - "${API_PORT}:80"
     volumes:
-      - ./back:/app
+      - w1_hackathon:/app
     healthcheck:
       test: curl -f http://localhost:80/healthcheck || exit 1
       interval: 5s
       timeout: 5s
       retries: 3
       start_period: 2s
+
+volumes:
+  w1_hackathon:
