--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -19,6 +19,7 @@ idna==3.10
 mako==1.3.10
 markupsafe==3.0.2
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22 ; platform_python_implementation != 'PyPy'
 pydantic==2.11.4
