fix: update container names for db and api services in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    container_name: postgres
+    container_name: w1_postgres
     image: postgres:16-alpine
     env_file:
       - .env
@@ -20,7 +20,7 @@ services:
       start_period: 2s
 
   api:
-    container_name: api
+    container_name: w1_api
     build: ./back
     ports:
       - "${API_PORT}:80"
