--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
+    "pydantic-ai-slim[openai]>=0.2.6",
     "pydantic-settings>=2.9.1",
     "pydantic[email]>=2.11.4",
     "python-jose[cryptography]>=3.4.0",
