--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -8,31 +8,45 @@ async-timeout==5.0.1 ; python_full_version < '3.11.3'
 bcrypt==4.3.0
 billiard==4.2.1
 celery==5.5.2
+certifi==2025.4.26
 cffi==1.17.1 ; platform_python_implementation != 'PyPy'
 click==8.2.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-colorama==0.4.6 ; sys_platform == 'win32'
+colorama==0.4.6
 cryptography==45.0.2
+deprecated==1.2.18
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.2.0
+eval-type-backport==0.2.2
 exceptiongroup==1.3.0 ; python_full_version < '3.11'
 fastapi==0.115.12
 greenlet==3.2.2 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')
+griffe==1.7.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+importlib-metadata==8.6.1
+jiter==0.10.0
 kombu==5.5.3
+logfire-api==3.16.0
 mako==1.3.10
 markupsafe==3.0.2
+openai==1.81.0
+opentelemetry-api==1.33.1
 passlib==1.7.4
 prompt-toolkit==3.0.51
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22 ; platform_python_implementation != 'PyPy'
 pydantic==2.11.4
+pydantic-ai-slim==0.2.6
 pydantic-core==2.33.2
+pydantic-graph==0.2.6
 pydantic-settings==2.9.1
 pyjwt==2.9.0
 python-dateutil==2.9.0.post0
@@ -46,9 +60,12 @@ sniffio==1.3.1
 sqlalchemy==2.0.41
 sqlmodel==0.0.24
 starlette==0.46.2
+tqdm==4.67.1
 typing-extensions==4.13.2
 typing-inspection==0.4.0
 tzdata==2025.2
 uvicorn==0.34.2
 vine==5.1.0
 wcwidth==0.2.13
+wrapt==1.17.2
+zipp==3.21.0
