--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/w1_holdings
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
     healthcheck:
       test: curl -f http://localhost:80/healthcheck || exit 1
       interval: 2s
@@ -57,6 +58,7 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/w1_holdings
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
     depends_on:
       - db
       - redis
